--- a/css.css
+++ b/css.css
@@ -1,16 +1,22 @@
 .main-info{
 display: flex;
 flex-direction: column;
+align-items: center;
 
+}
+#myText,.hello-ya{
+    text-align: center;
+    font-size: 18px;
+}
+.hello-ya-kbeer{
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
 }
 .sound-mandala{
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300px;
-    height: 300px;
-    margin:-60px 0 0 -60px;
+    width: 400px;
+    height: 400px;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
