--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,12 +247,15 @@ header.masthead p {
 }
 
 /* this is the form styling  */
-#form .container {
+.formstyle .container {
   background-color:white;
-  width: 30%;
+
+  width: fit-content;
+  
+  
  }
 
-#form input, textarea {
+.formstyle input, textarea {
   width: 100%;
   padding: 10px; 
   border: 1px slategrey 
@@ -262,21 +265,13 @@ header.masthead p {
 }
 
 
-#form input[type=submit] {
+.formstyle input[type=submit] {
   background-color: #101110;
   color: white;
   padding: 10px;
   border-radius: 8px;
-  width: 20%;
+  width: 25%;
   align-items: center;
   
 }
 
-
-
-#form .container {
-  background-color:white;
-  width: 25%;
- 
-}
-}
