--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,10 @@ body {
 }
 
 .roundedimgs {
-  border-radius: 50%;
-  max-width: 300px;
-  max-height: 300px;
+  border-radius: 60%;
+  border: 2px solid #d8af45;
+  width: 300px;
+  height: 300px;
   
 }
 hr {
@@ -54,7 +55,7 @@ h6 {
 }
 
 .text-faded {
-  color: #80475E;
+  color: #7d584f;
 }
 
 section {
